--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
